[package]
name = "client_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reservas = { path = "../reservas" }
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
regex = "1.10.4"
chrono = "0.4"
csv = "1.1.6"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
